# palktrack

./: .gitignore  CMakeLists.txt  README.md  analysis_options.yaml  main.cpp  paystub.cpp  paystub.h  pubspec.yaml  shift.cpp  shift.h  workdatabase.cpp  workdatabase.h
Example/: Main.qml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/palktrack/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: date_field.dart  io_page.dart  main.dart
lib/models/: paystub.dart
lib/paystub_form/: contribution_line_form.dart  deduction_line_form.dart  earning_line_form.dart  paystub_form.dart  tax_line_form.dart
lib/widgets/: date_picker_form_field.dart  paystub_form.dart  paystub_history_page.dart  shift_input_form.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
qml/: DateInput.qml  InputScreen.qml  Main.qml  PaystubInput.qml  ShiftInput.qml
src/: paystub.cpp  paystub.h  shift.cpp  shift.h  workdatabase.cpp  workdatabase.h
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
